Full functional and configured release

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
         {
             "label": "Run Home Assistant configuration against /config",
             "type": "shell",
-            "command": "container check",
+            "command": "container check-config",
             "problemMatcher": []
         },
         {
