--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
 	"image": "ghcr.io/ludeeus/devcontainer/integration:latest",
-	"name": "Blueprint integration development",
+	"name": "Versatile Thermostat integration",
 	"context": "..",
 	"appPort": [
 		"9123:8123"
@@ -18,11 +18,11 @@
 		"editor.tabSize": 4,
 		"terminal.integrated.profiles.linux": {
 			"Bash Profile": {
-			  "path": "bash",
-			  "args": [ ]
+				"path": "bash",
+				"args": []
 			}
-		  },
-		  "terminal.integrated.defaultProfile.linux": "Bash Profile",
+		},
+		"terminal.integrated.defaultProfile.linux": "Bash Profile",
 		// "terminal.integrated.shell.linux": "/bin/bash",
 		"python.pythonPath": "/usr/bin/python3",
 		"python.analysis.autoSearchPaths": false,
