--- a/custom_components/versatile_thermostat/manifest.json
+++ b/custom_components/versatile_thermostat/manifest.json
@@ -4,6 +4,7 @@
   "name": "Versatile Thermostat",
   "config_flow": true,
   "documentation": "https://github.com/jmcollin78/versatile_thermostat",
+  "issue_tracker": "https://github.com/jmcollin78/versatile_thermostat/issues",
   "requirements": [],
   "ssdp": [],
   "zeroconf": [],
@@ -12,6 +13,7 @@
   "codeowners": [
     "@jmcollin78"
   ],
-  "iot_class": "local_polling",
+  "quality_scale": "silver",
+  "iot_class": "calculated",
   "integration_type": "device"
 }
