--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,24 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
+// "image": "ghcr.io/ludeeus/devcontainer/integration:latest",
 {
-	"image": "ghcr.io/ludeeus/devcontainer/integration:latest",
+	"image": "mcr.microsoft.com/vscode/devcontainers/python:0-3.10",
 	"name": "Versatile Thermostat integration",
 	"context": "..",
 	"appPort": [
 		"9123:8123"
 	],
-	"postCreateCommand": "container install",
+	// "postCreateCommand": "container install",
+	"postCreateCommand": "./container install",
 	"extensions": [
 		"ms-python.python",
 		"github.vscode-pull-request-github",
 		"ryanluker.vscode-coverage-gutters",
 		"ms-python.vscode-pylance"
+	],
+	"mounts": [
+		"source=/Users/jmcollin/SugarSync/Projets/home-assistant/core,target=/home/vscode/core,type=bind,consistency=cached",
+		"source=${localWorkspaceFolder}/.devcontainer/configuration.yaml,target=/home/vscode/core/config/configuration.yaml,type=bind,consistency=cached",
+		"source=${localWorkspaceFolder}/custom_components,target=/home/vscode/core/config/custom_components,type=bind,consistency=cached"
 	],
 	"settings": {
 		"files.eol": "\n",
@@ -25,7 +32,7 @@
 		"terminal.integrated.defaultProfile.linux": "Bash Profile",
 		// "terminal.integrated.shell.linux": "/bin/bash",
 		"python.pythonPath": "/usr/bin/python3",
-		"python.analysis.autoSearchPaths": false,
+		"python.analysis.autoSearchPaths": true,
 		"python.linting.pylintEnabled": true,
 		"python.linting.enabled": true,
 		"python.formatting.provider": "black",
