--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,25 +4,43 @@
         {
             "label": "Run Home Assistant on port 9123",
             "type": "shell",
-            "command": "container start",
+            "command": "./container start",
+            "problemMatcher": []
+        },
+        {
+            "label": "Restart Home Assistant on port 9123",
+            "type": "shell",
+            "command": "./container restart",
+            "problemMatcher": []
+        },
+        {
+            "label": "Home Assistant translations update",
+            "type": "shell",
+            "command": "./container translations",
+            "problemMatcher": []
+        },
+        {
+            "label": "Home Assistant hassfest",
+            "type": "shell",
+            "command": "./container hassfest",
             "problemMatcher": []
         },
         {
             "label": "Run Home Assistant configuration against /config",
             "type": "shell",
-            "command": "container check-config",
+            "command": "./container check-config",
             "problemMatcher": []
         },
         {
             "label": "Upgrade Home Assistant to latest dev",
             "type": "shell",
-            "command": "container install",
+            "command": "./container install",
             "problemMatcher": []
         },
         {
             "label": "Install a specific version of Home Assistant",
             "type": "shell",
-            "command": "container set-version",
+            "command": "./container set-version",
             "problemMatcher": []
         }
     ]
