--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -118,3 +118,23 @@ template:
         unique_id: maison_occupee
         state: "{{is_state('person.jmc', 'home') }}"
         device_class: occupancy
+
+switch:
+  - platform: template
+    switches:
+      pilote_sdb_rdc:
+        friendly_name: "Pilote chauffage SDB RDC"
+        value_template: "{{ is_state_attr('switch_seche_serviettes_sdb_rdc', 'sensor_state', 'on') }}"
+        turn_on:
+          service: select.select_option
+          data:
+            option: comfort
+          target:
+            entity_id: select.seche_serviettes_sdb_rdc_cable_outlet_mode
+
+        turn_off:
+          service: select.select_option
+          data:
+            option: comfort-2
+          target:
+            entity_id: select.seche_serviettes_sdb_rdc_cable_outlet_mode
