--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -3,7 +3,7 @@ default_config:
 logger:
     default: info
     logs:
-        custom_components.versatile_thermostat: info
+        custom_components.versatile_thermostat: debug
         custom_components.versatile_thermostat.underlyings: debug
         custom_components.versatile_thermostat.climate: debug
 
