Issue #103 - expose preset temp pour AC mode

--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -43,6 +43,9 @@ set_preset_temperature:
                         - "eco"
                         - "comfort"
                         - "boost"
+                        - "eco_ac"
+                        - "comfort_ac"
+                        - "boost_ac"
         temperature:
             name: Temperature when present
             description: Target temperature for the preset when present
