--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -40,6 +40,8 @@ jobs:
         uses: "actions/setup-python@v4.6.0"
         with:
           python-version: "3.8"
+      - name: set dir
+        run: cd config/custom_components/versatile_thermostat
       - name: Install requirements
         run: python3 -m pip install -r requirements_test.txt
       - name: Run tests
