Bug #121 loop in over climate
* Issue #121 - loop when underlying is slow
* Issue #121 - try fix
* Release 3.5.3
* Fix tests step

--- a/custom_components/versatile_thermostat/requirements_test.txt
+++ b/custom_components/versatile_thermostat/requirements_test.txt
@@ -1,4 +1,5 @@
--r requirements_dev.txt
+# For automatic run of test in Gitlab CI, we must not include other things that pytest-homeassistant-custom-component
+#-r requirements_dev.txt
 # aiodiscover
-ulid_transform
+# ulid_transform
 pytest-homeassistant-custom-component
