--- a/custom_components/versatile_thermostat/requirements_test.txt
+++ b/custom_components/versatile_thermostat/requirements_test.txt
@@ -1,5 +1,5 @@
-# For automatic run of test in Gitlab CI, we must not include other things that pytest-homeassistant-custom-component
-#-r requirements_dev.txt
-# aiodiscover
-# ulid_transform
+# Warning: For automatic run of test in Gitlab CI, we must not include other things that pytest-homeassistant-custom-component
+-r requirements_dev.txt
+aiodiscover
+ulid_transform
 pytest-homeassistant-custom-component
